# migration_csv_to_postgresql

./: .env  Cargo.toml  registros.csv
src/: lib.rs  main.rs
