[package]
name = "migration_csv_to_postgresql"
version = "0.1.0"
authors = ["Daniel Cutipa <daniel.cutipa@mensivo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
chrono = "0.4"
postgres = "0.15.2"
